--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
             <p>
-              <a href="mailto:willtark@yahoo.com">willtark@yahoo.com</a>
+              <a href="mailto:whtarkenton@gmail.com">whtarkenton@gmail.com</a>
             </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
