--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">About Me</h2>
-            <!-- add image of me here -->
             <hr class="light">
+            <img src="./img/me.jpg" alt="William Tarkenton" style="height: 300px; width: 250px">
+            <br> <br>
             <p class="text-faded">A Washington, D.C. native, William received a bachelor’s degree in Communications from Rollins College before graduating from George Washington University’s full-time coding bootcamp. This combination of soft skills and technical expertise makes him uniquely qualified to work as a full stack web developer.</p>
           </div>
         </div>
